--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,5 @@
 </head>
 <body>
     <div id="react-app"></div>
-    <script type="text/javascript" src="/bundle.js?e24957d097b65fad05c9"></script>
-</body>
+<script type="text/javascript" src="/bundle.js?c5dfd96e453c55eeeb8b"></script></body>
 </html>
